@@ -16,7 +16,7 @@ version: "{branch} (#{build})"
 # branches to build
 branches:
   only:
-    - master
+    - arduino_library_manager
 
 # Do not build on tags (GitHub and BitBucket)
 skip_tags: true
